--- a/taskmaster/src/main/resources/templates/fragments/navigation.html
+++ b/taskmaster/src/main/resources/templates/fragments/navigation.html
@@ -18,7 +18,7 @@
         </svg>
     </label>
     <ul id="menu-links"
-        class=" hidden md:flex flex-col md:flex-row items-center space-x-4 order-3 md:order-2 w-full md:w-auto">
+        class=" hidden z-10 md:flex flex-col md:flex-row items-center space-x-4 order-3 md:order-2 w-full md:w-auto">
         <li><a sec:authorize="isAuthenticated()" th:href="@{/tasks/add-task}"
                class="text-base font-medium hover:text-primary-700">Add Task</a></li>
         <li><a sec:authorize="isAuthenticated()" th:href="@{/questions/ask}"
