--- a/taskmaster/src/main/resources/templates/contacts.html
+++ b/taskmaster/src/main/resources/templates/contacts.html
@@ -23,7 +23,7 @@
             <div class="grid grid-cols-2 gap-6 text-black">
                 <div>
                     <label th:for="title" class="block text-lg font-medium text-black">Title</label>
-                    <input th:field="*{title}" type="text" id="title" name="title" placeholder="Your Title"
+                    <input th:field="*{title}" type="text" id="title" name="title" placeholder="Title"
                            class="w-full px-4 py-3 mt-2 rounded-md border focus:outline-none focus:ring focus:ring-primary"
                            required/>
                     <div th:errors="*{title}"
@@ -33,7 +33,7 @@
                 </div>
                 <div>
                     <label th:for="email" class="block text-lg font-medium text-black">Email</label>
-                    <input th:field="*{email}" type="email" id="email" name="email" placeholder="Your Email"
+                    <input th:field="*{email}" type="email" id="email" name="email" placeholder="Email"
                            class="w-full px-4 py-3 mt-2 rounded-md border focus:outline-none focus:ring focus:ring-primary"
                            required/>
                     <div th:errors="*{email}"
