--- a/taskmaster/src/main/resources/templates/add-task.html
+++ b/taskmaster/src/main/resources/templates/add-task.html
@@ -77,11 +77,14 @@
             <div id="end-time-div">
                 <label th:for="endTime"
                        class="block text-sm font-medium text-black">End</label>
-                <!--                       th:value="*{#temporals.format(endTime, 'HH:mm')}"-->
                 <input th:field="*{endTime}"
                        id="endTime" name="dueDate" type="time"
                        class="text-black w-full mt-1 p-3 rounded-md border border-input focus:outline-none focus:ring focus:ring-ring"
                        placeholder="Select due date"/>
+                <div th:errors="*{startTime}"
+                     class="text-sm text-destructive">
+                    <p>Username length must be between 5 and 15 symbols!</p>
+                </div>
                 <div th:errors="global"
                      class="text-sm text-destructive">
                     <p>Username length must be between 5 and 15 symbols!</p>
