--- a/taskmaster/src/main/resources/templates/register.html
+++ b/taskmaster/src/main/resources/templates/register.html
@@ -52,10 +52,10 @@
                     <p>Age must be positive</p>
                 </div>
             </div>
+<!--                       required minlength="5" maxlength="15"-->
             <div class="mb-4">
                 <label th:for="password" class="block text-black text-sm font-medium mb-2">Password</label>
                 <input th:field="*{password}"
-                       required minlength="5" maxlength="15"
                        type="password" id="password" name="password"
                        placeholder="Enter your password"
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
@@ -63,16 +63,17 @@
                      class="text-sm text-destructive">
                     <p>Password length must be between 2 and 15 symbols!</p>
                 </div>
-                <div th:errors="global"
+                <div th:unless="${#fields.hasErrors('password') || #fields.hasErrors('confirmPassword')}"
+                     th:errors="global"
                      class="text-sm text-destructive">
                     <p>Password length must be between 2 and 15 symbols!</p>
                 </div>
             </div>
             <div class="mb-6">
+<!--                       required minlength="5" maxlength="15"-->
                 <label th:for="confirmPassword" class="block text-black text-sm font-medium mb-2">Confirm
                     Password</label>
                 <input th:field="*{confirmPassword}"
-                       required minlength="5" maxlength="15"
                        type="password" id="confirmPassword" name="confirmPassword"
                        placeholder="Confirm your password"
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
@@ -81,6 +82,7 @@
                     <p>Password length must be between 2 and 15 symbols!</p>
                 </div>
                 <div th:errors="global"
+                     th:unless="${#fields.hasErrors('password') || #fields.hasErrors('confirmPassword')}"
                      class="text-sm text-destructive">
                     <p>Password length must be between 2 and 15 symbols!</p>
                 </div>
