--- a/taskmaster/src/main/resources/templates/all-users.html
+++ b/taskmaster/src/main/resources/templates/all-users.html
@@ -6,7 +6,8 @@
 <div class="bg-background text-foreground min-h-screen p-4 flex flex-col items-center mb-8">
     <h1 class="text-3xl mb-6 text-center">All users</h1>
     <div class="flex w-[70em] justify-end mb-4">
-        <p th:text="${foundedUsers.getTotalElements() + ' users'}" id="founded-user-label" class="mr-auto text-2xl ">2 users</p>
+        <p th:text="${foundedUsers.getTotalElements() + ' users'}" id="founded-user-label" class="mr-auto text-2xl ">2
+            users</p>
         <div class="flex items-center space-x-2">
             <button onclick="search(getElementById('search').value)"
                     class="px-4 py-2 rounded-lg bg-primary text-primary-foreground">Search
@@ -68,14 +69,6 @@
                         Make Admin
                     </button>
                     <button th:id="*{id}"
-                            class="edit-button bg-secondary text-secondary-foreground px-2 py-1 rounded-lg">Edit
-                    </button>
-                    <button th:id="*{id}" th:data-username="*{username}"
-                            class="change-password-button bg-destructive text-destructive-foreground px-2 py-1 rounded-lg ml-2">
-                        Change
-                        password
-                    </button>
-                    <button th:id="*{id}"
                             class="delete-button bg-destructive text-destructive-foreground px-2 py-1 rounded-lg ml-2">
                         Delete
                     </button>
@@ -95,125 +88,10 @@
             </button>
         </div>
     </div>
-    <form th:method="put" th:action="@{/users}"
-          th:object="${editData}"
-          class="hidden flex flex-col justify-center gap-6 mt-4  w-[68.8%]"
-          id="editSection">
-        <h2 id="editLabel" class="text-2xl mb-2 border-solid border-b-2 border-black pb-2 rem mb-4">Edit</h2>
-        <input th:field="*{id}" type="hidden" id="editDataUserId">
-        <div class="flex gap-8">
-            <div class="w-full md:w-1/2">
-                <label class="block mb-3" for="username">Username</label>
-                <input th:field="*{username}" id="username" type="text"
-                       class="w-full  text-black border border-primary rounded-md px-3 py-2 mb-2"
-                       placeholder="Username"/>
-                <div th:errors="*{username}"
-                     class="text-sm text-destructive">
-                    <p>Username length must be between 5 and 15 symbols!</p>
-                </div>
-            </div>
-            <div class="w-full md:w-1/2">
-                <label class="block mb-3" for="fullName">Full Name</label>
-                <input th:field="*{fullName}" id="fullName" type="text"
-                       class="w-full  text-black border border-primary rounded-md px-3 py-2 mb-2"
-                       placeholder="FullName"/>
-                <div th:errors="*{fullName}"
-                     class="text-sm text-destructive">
-                    <p>Username length must be between 5 and 15 symbols!</p>
-                </div>
-            </div>
-        </div>
-        <div class="flex gap-8">
-            <div class="w-full md:w-1/2">
-                <label class="block mb-3" for="email">Email</label>
-                <input th:field="*{email}" id="email" type="email"
-                       class="w-full  text-black border border-primary rounded-md px-3 py-2 mb-2"
-                       placeholder="Email"/>
-                <div th:errors="*{email}"
-                     class="text-sm text-destructive">
-                    <p>Username length must be between 5 and 15 symbols!</p>
-                </div>
-            </div>
-            <div class="w-full md:w-1/2">
-                <label class="block mb-3" for="age">Age</label>
-                <input th:field="*{age}" id="age" type="number"
-                       class="w-full  text-black border border-primary rounded-md px-3 py-2 mb-2"
-                       placeholder="Age"/>
-                <div th:errors="*{age}"
-                     class="text-sm text-destructive">
-                    <p>Username length must be between 5 and 15 symbols!</p>
-                </div>
-            </div>
-        </div>
-        <div class="flex justify-start">
-            <button class="bg-primary text-primary-foreground px-4 py-2 rounded-lg">Save Changes</button>
-        </div>
-    </form>
-
-    <form th:method="patch"
-          th:action="@{/users/change-password}"
-          th:object="${changePasswordData}"
-          class="p-6 min-w-[45em] hidden" id="changePasswordSection">
-        <input th:field="*{id}" type="hidden" id="changePasswordUserId">
-        <h2 id="changePasswordLabel"
-            class="text-2xl mb-2 border-solid border-b-2 border-black pb-2 rem mb-4">Change Password</h2>
-        <div class="flex gap-4">
-            <div class="mb-4 w-full md:w-1/2">
-                <label th:for="newPassword" class="mb-3 block text-sm font-medium text-primary">New Password</label>
-                <input th:field="*{newPassword}" id="newPassword" type="password"
-                       class="w-full px-3 py-2 placeholder-input text-black border rounded-lg focus:outline-none focus:ring ring-primary"
-                       placeholder="Enter your new password"/>
-                <div th:errors="*{newPassword}"
-                     class="text-sm text-destructive">
-                    <p>Password length must be between 2 and 15 symbols!</p>
-                </div>
-                <div th:errors="global"
-                     class="text-sm text-destructive">
-                    <p>Password length must be between 2 and 15 symbols!</p>
-                </div>
-            </div>
-            <div class="mb-4 w-full md:w-1/2">
-                <label th:for="confirmPassword" class="mb-3 block text-sm font-medium text-primary">Confirm
-                    Password</label>
-                <input th:field="*{confirmPassword}"
-                       id="confirmPassword"
-                       type="password"
-                       class="w-full px-3 py-2 placeholder-input text-black border rounded-lg focus:outline-none focus:ring ring-primary"
-                       placeholder="Confirm your new password"
-                />
-                <div th:errors="*{confirmPassword}"
-                     class="text-sm text-destructive">
-                    <p>Password length must be between 2 and 15 symbols!</p>
-                </div>
-                <div th:errors="global"
-                     class="text-sm text-destructive">
-                    <p>Password length must be between 2 and 15 symbols!</p>
-                </div>
-            </div>
-        </div>
-        <div class="flex justify-start">
-            <button type="submit" class="bg-primary text-primary-foreground px-4 py-2 rounded-lg">Change password
-            </button>
-        </div>
-    </form>
-    <div th:if="${showEdit != null or showChangePassword != null}" id="scroll"></div>
 </div>
 <footer th:replace="~{/fragments/footer::footer}"></footer>
 </body>
 <script th:src="@{/js/pagingSortingAndFiltering.js}"></script>
-
-<script th:if="${showEdit}">
-    document.getElementById('editSection').classList.toggle('hidden', false);
-    document.getElementById('changePasswordSection').classList.add('hidden');
-    document.getElementById("scroll")
-        .scrollIntoView({block: "end", behavior: "smooth"});
-</script>
-<script th:if="${showChangePassword}">
-    document.getElementById('changePasswordSection').classList.toggle('hidden', false);
-    document.getElementById('editSection').classList.add('hidden');
-    document.getElementById("scroll")
-        .scrollIntoView({block: "end", behavior: "smooth"});
-</script>
 <script th:inline="javascript" th:replace="~{/fragments/csrf::csrf}"></script>
 <script th:src="@{/js/user-make-remove-admin.js}"></script>
 <script th:src="@{/js/pagingSortingAndFiltering.js}"></script>
