Edit how to show error messages and validation annotation validators

--- a/taskmaster/src/main/resources/templates/add-task.html
+++ b/taskmaster/src/main/resources/templates/add-task.html
@@ -69,10 +69,6 @@
                      class="text-sm text-destructive">
                     <p>Username length must be between 5 and 15 symbols!</p>
                 </div>
-                <div th:errors="global"
-                     class="text-sm text-destructive">
-                    <p>Username length must be between 5 and 15 symbols!</p>
-                </div>
             </div>
             <div id="end-time-div">
                 <label th:for="endTime"
@@ -81,11 +77,7 @@
                        id="endTime" name="dueDate" type="time"
                        class="text-black w-full mt-1 p-3 rounded-md border border-input focus:outline-none focus:ring focus:ring-ring"
                        placeholder="Select due date"/>
-                <div th:errors="*{startTime}"
-                     class="text-sm text-destructive">
-                    <p>Username length must be between 5 and 15 symbols!</p>
-                </div>
-                <div th:errors="global"
+                <div th:errors="*{endTime}"
                      class="text-sm text-destructive">
                     <p>Username length must be between 5 and 15 symbols!</p>
                 </div>
