--- a/taskmaster/src/main/resources/templates/questions.html
+++ b/taskmaster/src/main/resources/templates/questions.html
@@ -8,10 +8,12 @@
     <div class="flex flex-col md:flex-row items-center w-full px-4">
         <div class="mb-6 flex flex-col md:flex-row items-center gap-2 w-full">
             <div class="mr-auto text-black text-lg">6 questions</div>
-            <button class="px-4 py-2 rounded-lg bg-primary text-primary-foreground hover:bg-primary/80 focus:outline-none focus:ring focus:ring-primary">
+            <button onclick="search(getElementById('search'))"
+                    class="px-4 py-2 rounded-lg bg-primary text-primary-foreground hover:bg-primary/80 focus:outline-none focus:ring focus:ring-primary">
                 Search
             </button>
             <input type="text" placeholder="Search questions..."
+                   id="search"
                    class="w-full md:w-64 px-4 py-2 rounded-lg  text-black focus:outline-none focus:ring focus:ring-primary"/>
             <select onchange="sort('createdTime', this.value)"
                     class="px-4 py-2 pr-8 rounded-lg text-black  focus:outline-none focus:ring focus:ring-primary">
