--- a/taskmaster/src/main/resources/templates/change-password.html
+++ b/taskmaster/src/main/resources/templates/change-password.html
@@ -1,6 +1,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{/fragments/head::head}"></head>
 <body class="bg-blue-500 mb-6 mt-6">
+<form th:replace="~{/fragments/language::language(true)}"></form>
 <div class="bg-blue-500 min-h-screen flex items-center justify-center bg-background dark:bg-black">
     <div class="bg-card dark:bg-card-foreground rounded-lg shadow-lg p-8 max-w-sm w-full">
         <h2 class="text-2xl font-bold text-primary text-center mb-6">Change password</h2>
