--- a/taskmaster/src/main/resources/templates/edit-user.html
+++ b/taskmaster/src/main/resources/templates/edit-user.html
@@ -1,6 +1,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{/fragments/head::head}"></head>
 <body class="bg-blue-500 mb-6 mt-6">
+<form th:replace="~{/fragments/language::language(true)}"></form>
 <div class="text-primary-foreground min-h-screen flex items-center justify-center">
     <div class="bg-card lg:w-3/4 xl:w-1/2 py-8 px-12 rounded-lg shadow-lg">
         <h2 class="text-2xl text-black font-bold mb-6">Edit</h2>
