--- a/taskmaster/src/main/resources/templates/login.html
+++ b/taskmaster/src/main/resources/templates/login.html
@@ -1,36 +1,38 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{/fragments/head::head}"></head>
 <body>
+<form th:replace="~{/fragments/language::language(true)}"></form>
 <div class="bg-blue-500 min-h-screen flex items-center justify-center bg-background dark:bg-black">
     <div class="bg-card dark:bg-card-foreground rounded-lg shadow-lg p-8 max-w-sm w-full">
-        <h2 class="text-2xl font-bold text-primary text-center mb-6">Login</h2>
-        <form th:method="post" th:action="@{/users/login}" >
+        <h2 th:text="#{login_label}" class="text-2xl font-bold text-primary text-center mb-6">Login</h2>
+        <form th:method="post" th:action="@{/users/login}">
             <div class="mb-4">
-                <label for="username" class="block text-sm font-medium text-primary">Username</label>
+                <label th:text="#{login_username}" for="username" class="block text-sm font-medium text-primary">Username</label>
                 <input th:value="${username}"
-                        type="text"
-                        id="username"
-                        name="username"
-                        placeholder="Enter your username"
-                        class="w-full px-3 py-2 mt-1 text-primary  border border-primary rounded-md focus:outline-none focus:ring focus:ring-primary"
+                       type="text"
+                       id="username"
+                       name="username"
+                       th:placeholder="#{login_username_placeholder}"
+                       class="w-full px-3 py-2 mt-1 text-primary  border border-primary rounded-md focus:outline-none focus:ring focus:ring-primary"
                 />
             </div>
             <div class="mb-6">
-                <label for="password" class="block text-sm font-medium text-primary">Password</label>
+                <label th:text="#{login_password}" for="password" class="block text-sm font-medium text-primary">Password</label>
                 <input
                         type="password"
                         id="password"
                         name="password"
-                        placeholder="Enter your password"
+                        th:placeholder="#{login_password_placeholder}"
                         class="w-full px-3 py-2 mt-1 text-primary  border border-primary rounded-md focus:outline-none focus:ring focus:ring-primary"
                 />
             </div>
             <button type="submit"
+                    th:text="#{login_label}"
                     class="w-full bg-primary text-primary-foreground p-3 rounded-md hover:bg-primary/80 focus:outline-none focus:ring focus:ring-primary">
                 Login
             </button>
         </form>
-        <div th:if="${hasError}" class="text-center text-lg text-destructive ">
+        <div th:if="${hasError}" th:text="#{login_bad_credential}" class="text-center text-lg text-destructive ">
             <p>Incorrect username or password!</p>
         </div>
     </div>
