--- a/taskmaster/src/main/resources/templates/register.html
+++ b/taskmaster/src/main/resources/templates/register.html
@@ -1,6 +1,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{/fragments/head::head}"></head>
 <body class="bg-blue-500 mb-6 mt-6">
+<form th:replace="~{/fragments/language::language(true)}"></form>
 <div class="text-primary-foreground min-h-screen flex items-center justify-center">
     <div class="bg-card w-full max-w-md p-8 rounded-lg shadow-lg">
         <h2 class="text-black text-2xl font-bold mb-6">Register</h2>
