--- a/taskmaster/src/main/resources/templates/register.html
+++ b/taskmaster/src/main/resources/templates/register.html
@@ -4,16 +4,16 @@
 <form th:replace="~{/fragments/language::language(true)}"></form>
 <div class="text-primary-foreground min-h-screen flex items-center justify-center">
     <div class="bg-card w-full max-w-md p-8 rounded-lg shadow-lg">
-        <h2 class="text-black text-2xl font-bold mb-6">Register</h2>
+        <h2 th:text="#{register_label}" class="text-black text-2xl font-bold mb-6">Register</h2>
         <form class="text-black"
               th:method="post"
               th:action="@{/users/register}"
               th:object="${registerData}">
             <div class="mb-4">
-                <label th:for="username" class="block text-black text-sm font-medium mb-2">Username</label>
+                <label th:text="#{username_label}" th:for="username" class="block text-black text-sm font-medium mb-2">Username</label>
                 <input th:field="*{username}"
                        required minlength="5" maxlength="15"
-                       type="text" id="username" name="username" placeholder="Enter your username"
+                       type="text" id="username" name="username" th:placeholder="#{username_placeholder}"
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{username}"
                      class="text-sm text-destructive">
@@ -21,10 +21,10 @@
                 </div>
             </div>
             <div class="mb-4">
-                <label th:for="fullName" class="block text-black text-sm font-medium mb-2">Full Name</label>
+                <label th:text="#{full_name_label}" th:for="fullName" class="block text-black text-sm font-medium mb-2">Full Name</label>
                 <input th:field="*{fullName}"
                        required minlength="5" maxlength="20"
-                       type="text" id="fullName" name="fullName" placeholder="Enter your full name"
+                       type="text" id="fullName" name="fullName" th:placeholder="#{full_name_placeholder}"
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{fullName}"
                      class="text-sm text-destructive">
@@ -32,10 +32,10 @@
                 </div>
             </div>
             <div class="mb-4">
-                <label th:for="email" class="block text-black text-sm font-medium mb-2">Email</label>
+                <label th:text="#{email_label}" th:for="email" class="block text-black text-sm font-medium mb-2">Email</label>
                 <input th:field="*{email}"
                        required
-                       type="email" id="email" name="email" placeholder="Enter your email"
+                       type="email" id="email" name="email" th:placeholder="#{email_placeholder}"
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{email}"
                      class="text-sm text-destructive">
@@ -43,10 +43,10 @@
                 </div>
             </div>
             <div class="mb-4">
-                <label th:for="age" class="block text-black text-sm font-medium mb-2">Age</label>
+                <label th:text="#{age_label}" th:for="age" class="block text-black text-sm font-medium mb-2">Age</label>
                 <input th:field="*{age}"
                        required min="1"
-                       type="number" id="age" name="age" placeholder="Enter your age"
+                       type="number" id="age" name="age" th:placeholder="#{age_placeholder}"
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{age}"
                      class="text-sm text-destructive">
@@ -54,11 +54,11 @@
                 </div>
             </div>
             <div class="mb-4">
-                <label th:for="password" class="block text-black text-sm font-medium mb-2">Password</label>
+                <label th:text="#{password_label}" th:for="password" class="block text-black text-sm font-medium mb-2">Password</label>
                 <input th:field="*{password}"
                        required minlength="5" maxlength="15"
                        type="password" id="password" name="password"
-                       placeholder="Enter your password"
+                       th:placeholder="#{password_placeholder}"
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{password}"
                      class="text-sm text-destructive">
@@ -66,19 +66,19 @@
                 </div>
             </div>
             <div class="mb-6">
-                <label th:for="confirmPassword" class="block text-black text-sm font-medium mb-2">Confirm
-                    Password</label>
+                <label th:text="#{confirm_password_label}" th:for="confirmPassword"
+                       class="block text-black text-sm font-medium mb-2">Confirm Password</label>
                 <input th:field="*{confirmPassword}"
                        required minlength="5" maxlength="15"
                        type="password" id="confirmPassword" name="confirmPassword"
-                       placeholder="Confirm your password"
+                       th:placeholder="#{confirm_password_placeholder}"
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{confirmPassword}"
                      class="text-sm text-destructive">
                     <p>Password length must be between 2 and 15 symbols!</p>
                 </div>
             </div>
-            <button type="submit"
+            <button th:text="#{register_label}" type="submit"
                     class="w-full bg-primary text-primary-foreground py-2 rounded-lg hover:bg-primary/80 transition-colors duration-300">
                 Register
             </button>
