--- a/taskmaster/src/main/resources/templates/login.html
+++ b/taskmaster/src/main/resources/templates/login.html
@@ -7,22 +7,22 @@
         <h2 th:text="#{login_label}" class="text-2xl font-bold text-primary text-center mb-6">Login</h2>
         <form th:method="post" th:action="@{/users/login}">
             <div class="mb-4">
-                <label th:text="#{login_username}" for="username" class="block text-sm font-medium text-primary">Username</label>
+                <label th:text="#{username_label}" for="username" class="block text-sm font-medium text-primary">Username</label>
                 <input th:value="${username}"
                        type="text"
                        id="username"
                        name="username"
-                       th:placeholder="#{login_username_placeholder}"
+                       th:placeholder="#{username_placeholder}"
                        class="w-full px-3 py-2 mt-1 text-primary  border border-primary rounded-md focus:outline-none focus:ring focus:ring-primary"
                 />
             </div>
             <div class="mb-6">
-                <label th:text="#{login_password}" for="password" class="block text-sm font-medium text-primary">Password</label>
+                <label th:text="#{password_label}" for="password" class="block text-sm font-medium text-primary">Password</label>
                 <input
                         type="password"
                         id="password"
                         name="password"
-                        th:placeholder="#{login_password_placeholder}"
+                        th:placeholder="#{password_placeholder}"
                         class="w-full px-3 py-2 mt-1 text-primary  border border-primary rounded-md focus:outline-none focus:ring focus:ring-primary"
                 />
             </div>
